--- a/static/styling.css
+++ b/static/styling.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100vh;
     overflow: hidden;
-    
+
     background-color: antiquewhite;
 }
 
@@ -9,10 +9,10 @@ html, body {
     z-index: 1000;
     margin: 1em auto;
     background-color: #fff;
-    
+
     height: 82vh;
     width: 55vw;
-    
+
     border-radius: 25px;
     -moz-border-radius: 25px;
     -webkit-border-radius: 25px;
@@ -40,44 +40,75 @@ html, body {
     display: block;
     width: 80%;
     margin: 0 auto;
-    margin-top: 3em;
+    margin-top: 13em;
 }
 
 /* Slides */
-div.vert-cent {
+header.vert-cent {
     height: 160px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-h2.title-slides {
+form.answers {
+    width: 80%;
+    margin: .5em auto;
 }
 
 .form-group {
-    width: 40%;
+    width: 60%;
     font-size: 150%;
     display: block;
-    margin: 2em auto;
+    margin: 1em auto;
+    margin-top: 1em;
+    padding: 10px;
 }
 
 form.answers input {
     margin: .5em 1em .5em 0;
 }
 
-.buttonrow {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 3.5em;
-    position: fixed;
+form.done-form {
+    visibility: hidden;
 }
 
-.buttonrow button {
-    display: inline-block;
-    float: left;
-    width: 30em;
-    padding: 10px;
-    text-align: center;
+div.rowBtn {
+    width: 86%;
+    margin: 0 auto;
+    margin-top: 6em;
+}
+
+div.rowBtn button {
     color: #000;
-    margin: auto 3em;
+    width: 100%;
+}
+
+/* Results */
+.mainBody {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: .5em;
+}
+
+ol.ranking {
+    width: 100%;
+    margin-top: 1.5em;
+}
+
+ol.ranking li {
+    font-size: 80%;
+    padding: 7px;
+    height: 65px;
+}
+
+form#restart {
+    width: 80%;
+    margin: 0 auto;
+}
+
+button.btn-restart {
+    margin: 2.5em 0 0 0;
+    color: #000;
+    width: 100%;
 }
