--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                     <h2 class="title">Valg-O-Mat</h2>
 
                     <p class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempus pharetra fermentum. Curabitur placerat, enim et pharetra commodo, elit tortor porttitor libero, tristique molestie lacus nunc vitae ante.
+                        Lurer du på å søke Elektro på Rud men er usikker på hvilken av linjene som passer best for deg? Denne elektrovalgomaten kan hjelpe deg med å finne ut hva du kommer til å like best av Rud sine elektrotilbud!
                     </p>
 
                     <p class="begin"><a class="btn btn-lg btn-success start" role="button" href="slides.html">Start nå!</a></p>
