--- a/templates/done.html
+++ b/templates/done.html
@@ -29,7 +29,7 @@
                         
                         <section class="promo">
                             <p>
-                                Om du lurer på noe om et av studierettningene, eller vil snakke med en elev eller lærer, gå til <a href="https://www.rud.vgs.no">Rud VGS sin nettside</a>.
+                                Om du lurer på noe om et av studierettningene eller vil snakke med en elev eller lærer, gå til <a href="https://www.rud.vgs.no">Rud VGS sin nettside</a>.
                             </p>
                         </section>
                     </div>
